--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": ">=7.2.0",
         "guzzlehttp/guzzle": "^6.5.5|^7.0.1",
-        "league/flysystem": "^1.1.4|^2.1.1",
+        "league/flysystem": "^1.1.4|^2.1.1|^3.*",
         "nesbot/carbon": "^2.1"
     },
     "authors": [{
